--- a/server/views/index.hbs
+++ b/server/views/index.hbs
@@ -17,12 +17,12 @@
 	<script>
 		//Initialize Firebase
 	  var config = {
-	    apiKey: "AIzaSyBEuouCWoZH05y9u-3r7PwLggeOB66R4Bc",
-	    authDomain: "chachachat-b15ef.firebaseapp.com",
-	    databaseURL: "https://chachachat-b15ef.firebaseio.com",
-	    projectId: "chachachat-b15ef",
+	    apiKey: "<YOUR API KEY>",
+	    authDomain: "<YOUR AUTH DOMAIN>",
+	    databaseURL: "<YOUR DATABASE URL>",
+	    projectId: "<YOUR PROJECT ID>",
 	    storageBucket: "",
-	    messagingSenderId: "876839895905"
+	    messagingSenderId: "<MESSAGE SENDER>"
 	  };
 	  firebase.initializeApp(config);
 	</script>
